backend manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carflix-backend
  labels:
    app: carflix-backend
  namespace: backend
spec:
  replicas: 0
  selector:
    matchLabels:
      app: carflix-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: carflix-backend
    spec:
      containers:
      - image: 261897769841.dkr.ecr.ap-northeast-2.amazonaws.com/carflix-prod-repository:back.v3
        name: carflix-backend
        ports:
        - containerPort: 8081
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
          limits:
            cpu: 150m
            memory: 200Mi
      tolerations:
      - key: "backend-workload"
        operator: "Equal"
        effect: "NoSchedule"
      - key: "frontend-workload"
        operator: "Equal"
        effect: "NoSchedule"
      - key: "karpenter-back"
        operator: "Equal"
        effect: "NoSchedule"
