backend manifest/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carflix-ingress-backend
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=10800
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: carflix-ingress
    alb.ingress.kubernetes.io/group.order: '20'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:261897769841:certificate/6a575371-f4b9-4880-9070-fbee69458e54
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
  - host: api.mdscarflix.co.kr
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: carflix-backend-service
              port:
                number: 443
